# projekt-pop-24z

./: .gitignore  README.md  pyproject.toml
docs/: dokumentacja_wstepna.md  main.tex  midsem-report.tex  preliminary-docs.tex
src/projekt_pop_24z/: benchmark.py  experiments.py  main.py
src/projekt_pop_24z/benchmark_functions/: ackley.py  base.py  cec.py  rastrigin.py  repository.py  rosenbrock.py  sphere.py
src/projekt_pop_24z/swarm/: models.py  pso.py
src/projekt_pop_24z/utils/: logger.py  plotter.py
tests/swarm/: test_models.py  test_pso.py
