[project]
name = "projekt-pop-24z"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jedrzej Grabski", email = "grabski.dev@gmail.com"},
]
dependencies = ["matplotlib>=3.9.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = { cmd = "python -m projekt_pop_24z.main", env = { PYTHONPATH = "src" } }

[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
